<resources>
    <string name="default_web_client_id" translatable="false">228553851996-9arsbjd5611a276tms9mt1q0di9ak8sl.apps.googleusercontent.com</string>
    <string name="app_name">CocktailsDB</string>
    <string name="todo">TODO</string>
    <string name="boton_de_busqueda">Boton de busqueda</string>
    <string name="buscar_un_cocktail">Buscar un cocktail</string>
    <string name="trago_popular_numero_1">Trago popular numero 1</string>
    <string name="trago_popular_numero_2">Trago popular numero 2</string>
    <string name="trago_popular_numero_3">Trago popular numero 3</string>
    <string name="trago_popular_numero_4">Trago popular numero 4</string>
    <string name="trago_popular_numero_5">Trago popular numero 5</string>
    <string name="trago_popular_numero_6">Trago popular numero 6</string>
    <string name="trago_popular_numero_7">Trago popular numero 7</string>
    <string name="trago_popular_numero_8">Trago popular numero 8</string>
    <string name="trago_popular_numero_9">Trago popular numero 9</string>
    <string name="trago_popular_numero_10">Trago popular numero 10</string>
    <string name="buscar_por_filtros">Buscar por filtros</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="acceder_con_google">Acceder con Google</string>
    <string name="buscar_un_ingrediente">Buscar un ingrediente</string>
    <string name="margarita">Margarita</string>
    <string name="mojito">Mojito</string>
    <string name="old_fashioned">Old Fashioned</string>
    <string name="long_island">Long Island</string>
    <string name="negroni">Negroni</string>
    <string name="whiskey_amargo">Whiskey Amargo</string>
    <string name="martini_seco">Martini Seco</string>
    <string name="daiquir">Daiquirí</string>
    <string name="cocktails_populares">Cocktails Populares</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idcontainer_tag">idContainer</string>
    <string name="title_tag">title</string>
    <string name="cocktailfullviewfragment_tag">CocktailFullViewFragment</string>
    <string name="foto_ilustrativa_del_trago_seleccionado">Foto ilustrativa del trago seleccionado</string>
    <string name="ajustes_rapidos">Ajustes Rapidos</string>
    <string name="ingl_s">Inglés</string>
    <string name="espa_ol">Español</string>
    <string name="alem_n">Alemán</string>
    <string name="franc_s">Francés</string>
    <string name="italiano">Italiano</string>
    <string name="idioma_de_instrucciones">Idioma de instrucciones</string>
    <string name="preferences">Preferences</string>
    <string name="english">english</string>
    <string name="spanish">spanish</string>
    <string name="german">german</string>
    <string name="french">french</string>
    <string name="italian">italian</string>
    <string name="presiona_2_veces_para_volver_al_inicio">Presiona 2 veces para volver al inicio</string>
    <string name="cocktails_favoritos">Cocktails Favoritos</string>
    <string name="google_Api">AIzaSyDWHgNjRr_0T8Rdaa00LpwmLDjMKUInfRM</string>
    <string name="iddrink_tag">idDrink</string>
    <string name="traducido_por_google">(Traducido por Google)</string>
    <string name="kind_tag">Kind</string>
    <string name="glass_tag">Glass</string>
    <string name="category_tag">Category</string>
    <string name="idingredient_tag">idIngredient</string>
    <string name="ingredient_tag">Ingredient</string>
    <string name="letter_tag">letter</string>
    <string name="ingredientfullviewfragment_tag">IngredientFullViewFragment</string>
    <string name="imagen_ilustrativa_del_ingrediente">Imagen ilustrativa del ingrediente</string>
    <string name="se_utiliza_en">Se utiliza en:</string>
    <string name="ver_mas">Ver mas…</string>
    <string name="cocktailname_tag">cocktailName</string>
    <string name="no_hay_resultados">¡No hay resultados!</string>
    <string name="cocktailslistedfragment_tag">CocktailsListedFragment</string>
    <string name="onzas">Onzas</string>
    <string name="onzas_a_mililitros">Onzas a mililitros</string>
    <string name="ml">**** ml</string>
    <string name="equal">=</string>
    <string name="guardar_cocktail">Guardar cocktail</string>
    <string name="cocktailssaved_tag">cocktailsSaved</string>
    <string name="elija_una_posici_n">Elija una posición</string>
    <string name="restablecer_favoritos">Restablecer favoritos</string>
    <string name="est_seguro">¿Está seguro?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="random_tag">random</string>
    <string name="ver_original">Ver original</string>
    <string name="ver_traducci_n">Ver traducción</string>
    <string name="historial">Historial</string>
    <string name="guardados">Guardados</string>
</resources>