<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llMain"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:strokeColor="@color/similYellow"
        app:strokeWidth="1.5dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/montserrat_bold"
                android:layout_margin="12dp"
                android:id="@+id/tvTitle"
                android:text="@string/onzas_a_mililitros"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="12dp"
                android:id="@+id/etOunces"
                android:inputType="numberDecimal"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toStartOf="@id/tvEqual"
                android:hint="@string/onzas"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:id="@+id/tvEqual"
                android:text="@string/equal"
                android:fontFamily="@font/montserrat_regular"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvEqual"
                android:id="@+id/tvResult"
                android:background="@null"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="text"
                android:clickable="false"
                android:layout_margin="12dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/ml"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>