<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/clMainFooter"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/divider_horizontal_bright"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintBottom_toTopOf="@id/btnPreferences"
        android:layout_marginBottom="4dp"
        android:id="@+id/btnCloseSession"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/cerrar_sesi_n"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintBottom_toTopOf="@id/btnPreferences"
        android:layout_marginBottom="4dp"
        android:id="@+id/btnGoogle"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/acceder_con_google"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/googleg_standard_color_18" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        android:id="@+id/btnPreferences"
        android:layout_marginStart="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/ajustes_rapidos"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/settings_icon"
            app:drawableTint="@color/similYellow" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>