<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llMain"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:strokeColor="@color/similYellow"
        app:strokeWidth="1.5dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/montserrat_bold"
                android:layout_margin="12dp"
                android:id="@+id/tvTitle"
                android:text="@string/est_seguro"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="12dp"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    app:strokeColor="@color/orange"
                    app:strokeWidth="1dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/btnYes"
                    android:layout_marginEnd="12dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/orange"
                        android:text="@string/si"
                        android:layout_marginStart="48dp"
                        android:layout_marginEnd="48dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="match_parent"/>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    app:strokeColor="@color/orange"
                    app:strokeWidth="1dp"
                    app:cardElevation="4dp"
                    android:id="@+id/btnNo"
                    app:cardCornerRadius="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/no"
                        android:layout_marginStart="44dp"
                        android:layout_marginEnd="44dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="match_parent"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>